final working commit