@@ -20,7 +20,7 @@ dependencies {
 
 application{
     mainClass = 'ticket.booking.App'
-    applicationDefaultJvmArgs = ['enable-native-access=ALL-UNNAMED']
+    applicationDefaultJvmArgs = ['--enable-native-access=ALL-UNNAMED']
 }
 tasks.named('run'){
     standardInput=System.in
